--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "ethers": "^6.9.1",
         "formik": "^2.4.5",
         "moment": "^2.29.4",
         "next": "14.0.4",
