--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@walletconnect/web3-provider": "^1.8.0",
         "ethers": "^6.9.1",
         "formik": "^2.4.5",
         "moment": "^2.29.4",
         "next": "14.0.4",
         "react": "^18",
         "react-dom": "^18",
+        "web3modal": "^1.9.12",
         "yup": "^1.3.3"
     },
     "devDependencies": {
