--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "typechain": "typechain --target ethers-v6 --out-dir ./types/abis './abis/*.json'"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.3",
+        "@mui/x-date-pickers": "^6.18.6",
         "@walletconnect/web3-provider": "^1.8.0",
+        "dayjs": "^1.11.10",
         "ethers": "^6.9.1",
         "formik": "^2.4.5",
         "moment": "^2.29.4",
@@ -20,6 +26,7 @@
         "yup": "^1.3.3"
     },
     "devDependencies": {
+        "@typechain/ethers-v6": "^0.5.1",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -28,6 +35,7 @@
         "eslint-config-next": "14.0.4",
         "postcss": "^8",
         "tailwindcss": "^3.3.0",
+        "typechain": "^8.3.2",
         "typescript": "^5"
     }
 }
