--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@metamask/jazzicon": "^2.0.0",
         "@mui/material": "^5.15.3",
         "@mui/x-date-pickers": "^6.18.6",
         "@walletconnect/web3-provider": "^1.8.0",
@@ -22,6 +23,8 @@
         "next": "14.0.4",
         "react": "^18",
         "react-dom": "^18",
+        "react-loader-spinner": "^6.1.6",
+        "react-metamask-avatar": "^2.0.9",
         "web3modal": "^1.9.12",
         "yup": "^1.3.3"
     },
