--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@mui/x-date-pickers": "^6.18.6",
         "@walletconnect/web3-provider": "^1.8.0",
         "dayjs": "^1.11.10",
+        "dotenv": "^16.3.1",
         "ethers": "^6.9.1",
         "formik": "^2.4.5",
         "moment": "^2.29.4",
